crates/lexing_new/tests/snapshots/lexer__lower.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "add\n\nPrelude.add\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : LOWER
      text : "add"
  position : (1, 1)
     error : None

annotation : "\n\n"
 qualifier : "Prelude."
      kind : LOWER
      text : "add"
  position : (3, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (4, 1)
     error : None
