crates/lexing_new/tests/snapshots/lexer__number.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "123.0\n\n00123.0\n\n123e\n\n123E\n\n123e10\n\n123e+10\n\n123e-10\n\n123.0e10\n\n123.0e+10\n\n123.0e-10\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : NUMBER
      text : "123.0"
  position : (1, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "00123.0"
  position : (3, 1)
     error : Some("Too many leading zeros")

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123e"
  position : (5, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123E"
  position : (7, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123e10"
  position : (9, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123e+10"
  position : (11, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123e-10"
  position : (13, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123.0e10"
  position : (15, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123.0e+10"
  position : (17, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123.0e-10"
  position : (19, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (20, 1)
     error : None
