crates/lexing_new/tests/snapshots/lexer__operator_name.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "(+)\n(:)\n(..)\n\n({- detached -}..)\n(..{- detached -})\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : OPERATOR_NAME
      text : "(+)"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : OPERATOR_NAME
      text : "(:)"
  position : Position { line: 2, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : DOUBLE_PERIOD_OPERATOR_NAME
      text : "(..)"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : LEFT_PARENTHESIS
      text : "("
  position : Position { line: 5, column: 1 }
     error : None

annotation : "{- detached -}"
 qualifier : ""
      kind : DOUBLE_PERIOD
      text : ".."
  position : Position { line: 5, column: 16 }
     error : None

annotation : ""
 qualifier : ""
      kind : RIGHT_PARENTHESIS
      text : ")"
  position : Position { line: 5, column: 18 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_PARENTHESIS
      text : "("
  position : Position { line: 6, column: 1 }
     error : None

annotation : ""
 qualifier : ""
      kind : DOUBLE_PERIOD
      text : ".."
  position : Position { line: 6, column: 2 }
     error : None

annotation : "{- detached -}"
 qualifier : ""
      kind : RIGHT_PARENTHESIS
      text : ")"
  position : Position { line: 6, column: 18 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 7, column: 1 }
     error : None
