crates/lexing_new/tests/snapshots/lexer__operators.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "∷\n←\n→\n⇐\n⇒\n∀\n=\n:\n::\n.\n..\n<-\n->\n<=\n=>\n|\n@\n-\n\\\n`\n,\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : DOUBLE_COLON
      text : "∷"
  position : (1, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_ARROW
      text : "←"
  position : (2, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_ARROW
      text : "→"
  position : (3, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_THICK_ARROW
      text : "⇐"
  position : (4, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_THICK_ARROW
      text : "⇒"
  position : (5, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : FORALL
      text : "∀"
  position : (6, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : EQUAL
      text : "="
  position : (7, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : COLON
      text : ":"
  position : (8, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : DOUBLE_COLON
      text : "::"
  position : (9, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : PERIOD
      text : "."
  position : (10, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : DOUBLE_PERIOD
      text : ".."
  position : (11, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_ARROW
      text : "<-"
  position : (12, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_ARROW
      text : "->"
  position : (13, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_THICK_ARROW
      text : "<="
  position : (14, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_THICK_ARROW
      text : "=>"
  position : (15, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : PIPE
      text : "|"
  position : (16, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : AT
      text : "@"
  position : (17, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : MINUS
      text : "-"
  position : (18, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : BACKSLASH
      text : "\\"
  position : (19, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : TICK
      text : "`"
  position : (20, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : COMMA
      text : ","
  position : (21, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (22, 1)
     error : None
