crates/lexing_new/tests/snapshots/lexer__string_eof.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "\"hello\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : STRING
      text : "\"hello\n"
  position : (1, 1)
     error : Some("Unterminated single quoted string literal")

annotation : ""
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (2, 1)
     error : None
